fix vertical alignment of select items in Chrome

--- a/src/grvweb/style.css
+++ b/src/grvweb/style.css
@@ -134,7 +134,6 @@ input {
     flex: 0 0;
     display: inline-block;
     width: 100%;
-    height: 3ex;
     font-size: large;
     padding: 0 0.25em;
 }
